# Copyright 2023 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

import("../../testing/test.gni")
import("../Lynx.gni")

event_shared_sources = [
  "custom_event.cc",
  "custom_event.h",
  "event.cc",
  "event.h",
  "event_dispatch_result.h",
  "event_dispatcher.cc",
  "event_dispatcher.h",
  "event_listener.cc",
  "event_listener.h",
  "event_listener_map.cc",
  "event_listener_map.h",
  "event_target.cc",
  "event_target.h",
  "keyboard_event.cc",
  "keyboard_event.h",
  "touch_event.cc",
  "touch_event.h",
]

lynx_core_source_set("event") {
  sources = event_shared_sources
}

unittest_set("event_testset") {
  sources = [
    "event_listener_map_test.cc",
    "event_listener_map_test.h",
    "event_listener_test.cc",
    "event_listener_test.h",
    "event_target_test.cc",
    "event_target_test.h",
  ]
  public_deps = [
    "../../base/src:base_values",
    "../event",
  ]
  data_deps = []
}

unittest_exec("event_unittests_exec") {
  sources = []
  deps = [
    ":event_testset",
    "../../base/src:base_values_extended",
  ]
}

group("event_tests") {
  testonly = true
  deps = [ ":event_unittests_exec" ]
}
