# Copyright 2020 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

import("../../testing/test.gni")
import("../Lynx.gni")

declare_args() {
  # Enable javascript debug.
  use_js_debug = false
}

lynx_core_source_set("runtime") {
  deps = [
    "../../third_party/rapidjson",
    "common:reporter",
    "common/bindings/modules:native_modules",
    "js:js",
    "js:js_common",
    "js:utils",
    "js/bindings",
    "js/bindings/interceptor:interceptor_factory",
    "js/jsi",
    "profile",
    "profile/lepusng:lepusng_profile",
    "profile/quickjs:quickjs_profile",
    "//third_party/modp_b64",
  ]

  if (is_android || is_ios || is_win || is_mac || enable_unittests) {
    deps += [ "profile/v8:v8_profile" ]
  }

  public_deps = [ "js/jsi/quickjs" ]
  if (enable_napi_binding) {
    public_deps += [ "common/napi:napi_binding_core" ]
    deps += [ "js/napi:napi_loader_js" ]
  }
  if (is_android || is_ios) {
    defines = [
      "JS_SHARED_LIBRARY",
      "EMSCRIPTEN",
      "CONFIG_VERSION=\"2019-07-09\"",
      "LYNX_DEV",
      "LYNX_SIMPLIFY=0",
    ]

    if (is_debug) {
      defines += [ "DEBUG_MEMORY" ]
    }

    configs = [ "//build/config/compiler:no_chromium_code" ]
    exclude_configs = [ "//build/config/compiler:chromium_code" ]

    cflags = [ "-Wno-unused-variable" ]

    if (is_android) {
      public_deps += [ "js/bindings/modules/android:modules_android_src" ]
    }
    if (enable_napi_binding) {
      public_deps += [ "common/napi:napi_binding_core" ]
    }
  }
}

unittest_set("runtime_testset") {
  sources = [
    "common/bindings/modules/lynx_native_module_manager_unittest.cc",
    "js/bindings/modules/lynx_module_manager_unittest.cc",
    "js/bindings/modules/native_module_factory_unittest.cc",
    "js/js_bundle_unittest.cc",
    "js/runtime_lifecycle_observer_unittest.cc",
  ]

  deps = [
    ":runtime",
    "../renderer/dom:dom",
    "../renderer/utils:renderer_utils",
    "common:reporter_unittests_testset",
    "common/napi:napi_unittests_testset",
    "js:utils_unittests_testset",
    "js/bindings:bindings_unittests_testset",
    "js/bytecode:jscache_unittests_testset",
    "js/jsi:jsi_unittests_testset",
    "js/jsi/quickjs:quickjs_unittests_testset",
  ]
}

unittest_exec("runtime_tests_exec") {
  sources = []
  deps = [ ":runtime_testset" ]
}
