# Copyright 2020 The Lynx Authors. All rights reserved.
# Licensed under the Apache License Version 2.0 that can be found in the
# LICENSE file in the root directory of this source tree.

import("../../testing/test.gni")
import("../Lynx.gni")

lynx_core_source_set("white_board") {
  sources = [
    "lynx_white_board.cc",
    "lynx_white_board.h",
  ]

  public_deps = [ "../base" ]
}

lynx_core_source_set("shared_data") {
  sources = [
    "shared_data_trace_event_def.h",
    "white_board_delegate.cc",
    "white_board_delegate.h",
    "white_board_inspector.h",
    "white_board_runtime_delegate.cc",
    "white_board_runtime_delegate.h",
    "white_board_tasm_delegate.cc",
    "white_board_tasm_delegate.h",
  ]

  libs = []
  public_deps = [
    ":white_board",
    "../runtime",
    "../runtime/lepus:lepus",
  ]
}

unittest_set("shared_data_test_testset") {
  testonly = true
  public_deps = [ "../shared_data" ]

  deps = [
    "../renderer:tasm",
    "../renderer/dom:renderer_dom",
    "../runtime/lepus/bindings:bindings",
    "../shell/testing:mock_tasm_delegate_testset",
    "../shell/testing:shell_testset",
  ]

  sources = [ "lynx_white_board_unittest.cc" ]
}

unittest_exec("shared_data_test_exec") {
  testonly = true
  sources = []
  deps = [
    ":shared_data_test_testset",
    "../renderer/dom:dom",
  ]
}
